netty server ip配置

--- a/netty-client/src/main/resources/config.properties
+++ b/netty-client/src/main/resources/config.properties
@@ -11,3 +11,6 @@ jdbc.url=jdbc:postgresql://localhost:5432/postgres
 
 jdbc.username=postgres
 jdbc.password=3416763
+
+netty.server.ip=127.0.0.1
+netty.server.port=8080
